# Minicahe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  _gen_benchmark.py  install.bat  install.ps1  install.sh  pyproject.toml  setup.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml
docs/: PLAN.md
skills/claude-code/: skill.json
src/minicahe/: __init__.py  cli.py  code_compressor.py  compressor.py  stats.py  tokenizer.py
src/minicahe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: _gen.py  benchmark.py  test_code.py  test_compressor.py  test_mask_pii.py  test_tokenizer.py
