[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicahe"
version = "0.1.0"
description = "Minicahe - Mini Token Optimizer: talk smart, use fewer tokens"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["tokens", "compression", "llm", "cli"]

dependencies = [
    "click>=8.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/minicahe/minicahe"

[project.scripts]
minicahe = "minicahe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
