[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicahe"
version = "0.1.0"
description = "Minicahe - Mini Token Optimizer: talk smart, use fewer tokens"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vu Hoang Khoi Nguyen (toilanguyen2910)", email = "toilanguyen2910@example.com"}
]
keywords = ["tokens", "compression", "llm", "cli", "tiktoken", "openai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "click>=8.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/toilanguyen2910/Minicahe"
Repository = "https://github.com/toilanguyen2910/Minicahe.git"

[project.scripts]
minicahe = "minicahe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
